glx/testdata/invalid/custom-vocab-edge-cases/events/event-custom.glx
events:
  event-custom:
    type: unknown-event-type
    date: "1850-01-15"
    properties:
      custom_event_prop: "value"


